src/test/deca/context/invalid/class/redefinition-type-dif.deca
// Programme testant de redéfinir une méthode avec un type différent

class A {
    void method() {}
}

class B extends A {
    int method() {}
}